# forex-maker

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PROBLEM_STATEMENT.md  README.md  TECHNICAL_SPEC.md  docker-compose.yml  pyproject.toml
dashboard/: .env.example  .gitignore  next.config.ts  package-lock.json  package.json  tailwind.config.ts
deploy/: Caddyfile  setup.sh
docs/: accounts.md  arbitrage.md  block-radar-questions.md  data-persistence.md  delta-neutrality.md  problem-statement.md  runbook.md  tech-spec.md  tests.md  when-to-arb.md
engine/: __init__.py  accounts.py  config.py  main.py  runtime.py  scheduler.py  types.py  venue_controls.py  web3_utils.py  ws.py
scripts/: manual_v4_buy.py  manual_v4_sell.py  recover_half_open.py  show_accounts.py  simulate_lp_flow.py  test_dex_capital_allocation.py  test_dex_price_readers.py  test_quidax_mock.py  test_quidax_order.py  test_quidax_sell_cngn.py  transfer.py
tests/: __init__.py  conftest.py  conftest_params.py  fakes.py  fork_helpers.py  test_accounts.py  test_api_routes.py  test_arb_guards.py  test_arb_persistence.py  test_arbitrage.py  test_capital_allocation.py  test_cex_dex.py  test_cex_dex_execution.py  test_config.py  test_database.py  test_dex_dex.py  test_dex_dex_execution.py  test_dex_fork.py  test_dex_volume.py  test_executor.py  test_gas_oracle.py  test_inventory.py  test_listener.py  test_lp_e2e.py  test_lp_ratio.py  test_main.py  test_orderbook.py  test_params_validation.py  test_pool_state.py  test_portfolio_exposure.py  test_price_aggregation.py  test_price_math.py  (+13 more)
(+197 files in other folders)
