[project]
name = "cngn-trading"
version = "0.1.0"
description = "CNGN market-making automation across DEXs, CEXs, and wallet systems"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "web3>=6.0.0,<7.0.0",
    "httpx[socks]>=0.26.0",
    "apscheduler>=3.10.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=21.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["engine"]

[[tool.mypy.overrides]]
module = ["apscheduler.*"]
ignore_missing_imports = true
